# authenticate

authenticate-oauth/: LICENSE  authenticate-oauth.cabal
authenticate-oauth/Web/Authenticate/: OAuth.hs
