name:            authenticate-oauth
version:         1.5
license:         BSD3
license-file:    LICENSE
author:          Hiromi Ishii, Felipe Lessa <felipe.lessa@prowdsponsor.com>
maintainer:      Hiromi Ishii
synopsis:        Library to authenticate with OAuth for Haskell web applications.
description:     OAuth authentication, e.g. Twitter.
category:        Web
stability:       Stable
cabal-version:   >= 1.6
build-type:      Simple
homepage:        http://github.com/yesodweb/authenticate

library
    build-depends:   base                          >= 4        && < 5
                   , http-client                   >= 0.3
                   , transformers                  >= 0.1      && < 0.5
                   , bytestring                    >= 0.10
                   , crypto-pubkey-types           >= 0.1      && < 0.5
                   , RSA                           == 2.0.*
                   , time
                   , data-default
                   , base64-bytestring             >= 0.1      && < 1.1
                   , SHA                           >= 1.4      && < 1.7
                   , unordered-containers          == 0.2.*
                   , http-types                    >= 0.6
                   , blaze-builder
                   , blaze-builder-conduit         >= 0.4
                   , nonce                         == 1.0.*
    exposed-modules: Web.Authenticate.OAuth
    ghc-options:     -Wall

source-repository head
  type:     git
  location: git://github.com/yesodweb/authenticate.git
